[package]
name = "cw1-subkeys"
version = "1.0.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Implement subkeys for authorizing native tokens as a cw1 proxy contract"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
cosmwasm-schema = { git = "https://github.com/finschia/cosmwasm", tag = "v1.1.9-0.7.0-dynamiclink1" }
cw-utils = { git = "https://github.com/dudong2/cw-utils", branch = "dynamic_link" }
cw1 = { path = "../../packages/cw1", version = "1.0.1" }
cw2 = { path = "../../packages/cw2", version = "1.0.1" }
cw1-whitelist = { path = "../cw1-whitelist", version = "1.0.1", features = ["library"] }
cosmwasm-std = { git = "https://github.com/finschia/cosmwasm", tag = "v1.1.9-0.7.0-dynamiclink1", features = ["staking"] }
cw-storage-plus = { git = "https://github.com/dudong2/cw-storage-plus", branch = "dynamic_link" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.23"
semver = "1"

[dev-dependencies]
cw1-whitelist = { path = "../cw1-whitelist", version = "1.0.1", features = ["library", "test-utils"] }
