[package]
name = "cw1-whitelist"
version = "1.0.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Implementation of an proxy contract using a whitelist"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
cosmwasm-schema = { git = "https://github.com/finschia/cosmwasm", tag = "v1.1.9-0.7.0-dynamiclink1" }
cw-utils = { git = "https://github.com/dudong2/cw-utils", branch = "dynamic_link" }
cw1 = { path = "../../packages/cw1", version = "1.0.1" }
cw2 = { path = "../../packages/cw2", version = "1.0.1" }
cosmwasm-std = { git = "https://github.com/finschia/cosmwasm", tag = "v1.1.9-0.7.0-dynamiclink1", features = ["staking"] }
cw-storage-plus = { git = "https://github.com/dudong2/cw-storage-plus", branch = "dynamic_link" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
cw-multi-test = "0.16.1"
derivative = "2"
